<resources>
    <string name="app_name">Shared Shopping List</string>

    <!-- Splash -->
    <string name="splash">Splash!</string>

    <!-- Login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In or Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_password_too_short">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_credentials">The email and password combination provided is invalid.</string>
    <string name="error_network">Network error</string>
    <string name="error_create_account">Could not create account</string>
    <string name="or_sign_in_using">or sign in using</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="title_login">Login</string>
    <string name="error_google_sign_in">Failed to sign in with Google</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_placeholder_title">Lists you add will appear here</string>
    <string name="shopping_list_title">Title</string>
    <string name="create_list_success">Create list success</string>
    <string name="create_list_error">Could not create list</string>
    <string name="preview">milk\neggs\ncookies</string>
    <string name="error_getting_lists">Could not get lists</string>
    <string name="could_not_get_list">Could not get list</string>
    <string name="add_item">+ Add Item</string>
    <string name="add_people">Add People</string>
    <string name="delete_list">Delete List</string>
    <string name="create_edit_list">Create / Edit List</string>
    <string name="my_profile">My Profile</string>
    <string name="my_lists">My Shopping Lists</string>
    <string name="type_to_search">Type to search…</string>
    <string name="share_with">Share with:</string>
    <string name="send">Send</string>
    <string name="invitations_sent">Invitations sent</string>
    <string name="failed_to_send_invitations">Failed to send invitations</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="are_you_sure_you_want_to_delete_this_list">Are you sure you want to delete this list?</string>
    <string name="yes_delete">Yes, delete</string>
    <string name="not_really">Not really</string>
    <string name="could_not_delete_list">Couldn\'t delete list</string>
    <string name="save">Save</string>
    <string name="name">Display Name</string>
    <string name="email_placeholder">example@email.com</string>
    <string name="could_not_get_user">Couldn\'t get user</string>
    <string name="about">About</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="could_not_create_file">Could not create file</string>
    <string name="error_uploading_file">Error uploading file</string>
    <string name="saved">Saved!</string>
    <string name="error_updating_info">Error updating info</string>
    <string name="no_crop_support_message">Whoops - your device doesn\'t support the crop action!</string>
    <string name="no_activity_to_handle_action">There is no activity that could handle this action</string>
    <string name="app_album">SharedShoppingList</string>
    <string name="could_not_update_image_too_large">Could not upload image because it is too large</string>
    <string name="process_canceled">Process was canceled</string>
    <string name="camera_permissions_needed_title">SmartCare needs access to the camera.</string>
    <string name="storage_permissions_needed_title">SmartCare needs access to the device storage</string>
    <string name="camera_permissions_needed_message">In order to change your profile picture by taking a photo, SmartCare needs your permission to access the device\'s camera.</string>
    <string name="never_mind">Never mind</string>
    <string name="storage_permissions_needed_message">In order to change your profile picture by using images from your gallery, SmartCare needs your permission to access the device\'s storage.</string>
    <string name="ok">OK</string>
    <string name="could_not_update_image">We could not update your profile picture, because for some reason the image could not be saved.</string>
    <string name="complete_action_using">Complete action using</string>
    <string name="connect_with_us">Connect with us</string>
    <string name="developer_email">csaba.csete@gmail.com</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="email_icon">Email icon</string>
    <string name="password_icon">Password Icon</string>
    <string name="title_register">Register</string>
    <string name="by_tapping_register_you_agree">By tapping \"Register\" you agree to the</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="background">Background</string>
    <string name="don_t_have_account_yet">Don\'t have account yet?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="register_with_social_platforms">Register with Social Platforms</string>
    <string name="login_here">Login here</string>

</resources>
