<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        android:src="@drawable/shopping_cart"
        android:tint="@color/white_overlay" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/title_login"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iconEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/email_icon"
                app:layout_constraintBottom_toBottomOf="@+id/emailEditTextWrapper"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/emailEditTextWrapper"
                app:srcCompat="@drawable/ic_email" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailEditTextWrapper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iconEmail"
                app:layout_constraintTop_toBottomOf="@+id/title">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/iconPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/password_icon"
                app:layout_constraintBottom_toBottomOf="@+id/passwordEditTextWrapper"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/passwordEditTextWrapper"
                app:srcCompat="@drawable/ic_lock" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordEditTextWrapper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iconPassword"
                app:layout_constraintTop_toBottomOf="@+id/emailEditTextWrapper"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/doNotHaveAccountYet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_account_yet"
                app:layout_constraintBaseline_toBaselineOf="@+id/registerButton"
                app:layout_constraintEnd_toStartOf="@+id/registerButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/registerButton"
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/register"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/doNotHaveAccountYet"
                app:layout_constraintTop_toBottomOf="@+id/passwordEditTextWrapper" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/login"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="@+id/registerButton"
                app:layout_constraintStart_toStartOf="@+id/doNotHaveAccountYet"
                app:layout_constraintTop_toBottomOf="@+id/registerButton" />

            <View
                android:id="@+id/guideline"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintBottom_toTopOf="@+id/registerWithSocialPlatforms"
                app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

            <View
                android:id="@+id/blue_background"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideline" />


            <TextView
                android:id="@+id/orFloatingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle"
                android:elevation="4dp"
                android:gravity="center"
                android:text="@string/or"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/registerWithSocialPlatforms"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/socialButtonGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:clickable="true"
                android:focusable="true"
                android:theme="@style/WhiteAccent"
                app:fabSize="mini"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/socialButtonFacebook"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_google" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/socialButtonFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:clickable="true"
                android:focusable="true"
                android:theme="@style/WhiteAccent"
                app:fabSize="mini"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/socialButtonTwitter"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/socialButtonGoogle"
                app:srcCompat="@drawable/ic_facebook" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/socialButtonTwitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:clickable="true"
                android:focusable="true"
                android:theme="@style/WhiteAccent"
                app:fabSize="mini"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/socialButtonFacebook"
                app:srcCompat="@drawable/ic_twitter" />

            <TextView
                android:id="@+id/registerWithSocialPlatforms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/register_with_social_platforms"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toTopOf="@+id/socialButtonFacebook"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>